# DartScorer

./: README.md
.github/workflows/: codeql.yml
Software/: .gitignore  DartScorer.6  Makefile.am  TODO  build.sh  configure.ac
Software/audio/: DE.words  EN.words  Makefile.am  README  README.md
Software/etc/: DartScorer.desktop  Makefile.am
Software/fonts/: installRoboto.sh
Software/images/: Makefile.am
Software/images/icons/: generate.sh
Software/images/logo/: generate.sh
Software/po/: ChangeLog  Makevars  POTFILES.in  README  de.po
Software/scripts/: findCams.sh  makedeb.sh
Software/src/: Board.cpp  Board.h  BoardUI.cpp  BoardUI.h  BoardWidget.cpp  BoardWidget.h  Config.cpp  Config.h  ConfigKeys.h  DartScorer.cpp  DartScorer.h  DartScorerGUI.fl  Database.cpp  Database.h  GameUI.cpp  GameUI.h  GameX01Widget.cpp  GameX01Widget.h  Makefile.am  Player.cpp  Player.h  PlayerManagementEditUI.cpp  PlayerManagementEditUI.h  PlayerManagementUI.cpp  PlayerManagementUI.h  Points.cpp  Points.h  PointsQueue.cpp  PointsQueue.h  ScoreHistoryWidget.cpp  ScoreHistoryWidget.h  ScoreInputUI.cpp  ScoreInputUI.h  ScoreInputWidget.cpp  ScoreInputWidget.h  Statistics.cpp  Statistics.h  StatisticsWidget.cpp  StatisticsWidget.h  Turn.cpp  (+7 more)
Software/voices/: .gitignore  Makefile.am  README.md  generate-espeak.sh
